--- a/main.html
+++ b/main.html
@@ -8,7 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<form method="post">
+	    <label for="name">Name</label>
+		<input type="text" id="name">
+		<label for="email">Email</label>
+		<input type="email" id="email">
+		<lable for="gender">Gender</lable>
+		<label for="male">Male</label>
+		<input type="radio">
+		<label for="female">Female</label>
+		<input type="radio">
+		<label for="other">other</label>
+		<input type="radio">
+		<label for="laptop">Laptop Brands</label>
+		
+		<select name="laptop" id="laptop">
+		  <option value="apple">Apple</option>
+		  <option value="asus">Asus</option>
+		  <option value="hp">HP</option>
+		 
+		</select>
+		<label for="age">Age</label>
+		<input type="number" id="age">
+		<label for="dob">DOB</label>
+		<input type="date" id="dob">
+		<label for="password">Password</label>
+		<input type="password" id="password">
+	    <button>submit</button>
+		
+	</form>
+		    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
