--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 	    <label for="name">Name</label>
-		<input type="text" id="name">
+		<input type="text" id="name"></br>
 		<label for="email">Email</label>
-		<input type="email" id="email">
-		<lable for="gender">Gender</lable>
+		<input type="email" id="email"></br>
+		<lable for="gender">Gender</lable></br>
 		<label for="male">Male</label>
 		<input type="radio">
 		<label for="female">Female</label>
 		<input type="radio">
 		<label for="other">other</label>
-		<input type="radio">
+		<input type="radio"></br>
 		<label for="laptop">Laptop Brands</label>
 		
 		<select name="laptop" id="laptop">
@@ -27,13 +27,13 @@
 		  <option value="asus">Asus</option>
 		  <option value="hp">HP</option>
 		 
-		</select>
+		</select></br>
 		<label for="age">Age</label>
-		<input type="number" id="age">
+		<input type="number" id="age"></br>
 		<label for="dob">DOB</label>
-		<input type="date" id="dob">
+		<input type="date" id="dob"></br>
 		<label for="password">Password</label>
-		<input type="password" id="password">
+		<input type="password" id="password"></br>
 	    <button>submit</button>
 		
 	</form>
