--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 	    <label for="name">Name</label>
-		<input type="text" id="name"></br>
+		<input type="text" id="name" class="portfolio"></br>
 		<label for="email">Email</label>
-		<input type="email" id="email"></br>
+		<input type="email" id="email" class="portfolio"></br>
 		<lable for="gender">Gender</lable></br>
 		<label for="male">Male</label>
-		<input type="radio">
+		<input type="radio" class="portfolio">
 		<label for="female">Female</label>
-		<input type="radio">
+		<input type="radio" class="portfolio">
 		<label for="other">other</label>
-		<input type="radio"></br>
+		<input type="radio" class="portfolio"></br>
 		<label for="laptop">Laptop Brands</label>
 		
 		<select name="laptop" id="laptop">
@@ -29,11 +29,11 @@
 		 
 		</select></br>
 		<label for="age">Age</label>
-		<input type="number" id="age"></br>
+		<input type="number" id="age" class="portfolio"></br>
 		<label for="dob">DOB</label>
-		<input type="date" id="dob"></br>
+		<input type="date" id="dob" class="portfolio"></br>
 		<label for="password">Password</label>
-		<input type="password" id="password"></br>
+		<input type="password" id="password" class="portfolio"></br>
 	    <button>submit</button>
 		
 	</form>
