--- a/main.html
+++ b/main.html
@@ -9,17 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form method="post">
-	    <label for="name">Name</label>
-		<input type="text" id="name" class="portfolio"></br>
-		<label for="email">Email</label>
-		<input type="email" id="email" class="portfolio"></br>
-		<lable for="gender">Gender</lable></br>
+	    <label for="name">Name*</label>
+		<input type="text" id="name" class="portfolio" required></br>
+		<label for="email">Email*</label>
+		<input type="email" id="email" class="portfolio" required></br>
+		
+		<lable for="gender">Gender*</lable></br>
+		<input type="radio" class="portfolio" name="gender" required>
 		<label for="male">Male</label>
-		<input type="radio" class="portfolio">
-		<label for="female">Female</label>
-		<input type="radio" class="portfolio">
-		<label for="other">other</label>
-		<input type="radio" class="portfolio"></br>
+		
+		<input type="radio" class="portfolio" required>
+		<label for="female" name="gender">Female</label>
+		
+		
 		<label for="laptop">Laptop Brands</label>
 		
 		<select name="laptop" id="laptop">
@@ -28,12 +30,12 @@
 		  <option value="hp">HP</option>
 		 
 		</select></br>
-		<label for="age">Age</label>
-		<input type="number" id="age" class="portfolio"></br>
-		<label for="dob">DOB</label>
-		<input type="date" id="dob" class="portfolio"></br>
-		<label for="password">Password</label>
-		<input type="password" id="password" class="portfolio"></br>
+		<label for="age">Age*</label>
+		<input type="number" id="age" class="portfolio" required></br>
+		<label for="dob">DOB*</label>
+		<input type="date" id="dob" class="portfolio" required></br>
+		<label for="password">Password*</label>
+		<input type="password" id="password" class="portfolio" required></br>
 	    <button>submit</button>
 		
 	</form>
